--- a/src/html/top.html
+++ b/src/html/top.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>top</title>
+    <!-- <link rel="stylesheet" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.css"> -->
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/top.css">
+    <script src="../js/jquery-3.2.1.js"></script>
+    <!-- <script src="../lib/bootstrap-3.3.7-dist/js/bootstrap.js"></script> -->
 </head>
 <body>
-    
+    <div class="public-top-layout">
+        <div class="container">
+        <div class="pub-top-left fl clearfix">
+            <div>
+            送至:
+            <span class="more">北京</span>
+            </div>
+            <ul class="province">
+                
+            </ul>
+        </div>
+        <dl class="pub-top-right fr clearfix nav navbar-nav">
+                <dt>
+                    您好，欢迎来到 
+                    <span class="mallvv">为为商城</span>
+                    <a class="tipcolor pub-login" href="#">请登录</a>
+                    <a class="pub-register" href="#">免费注册</a></dt>
+                <dl><a class="pub-order more" href="#">我的订单</a></dl>
+                <dl><a class="pub-buscen more" href="#">商家中心</a></dl>
+                <dl class="phone-mallvv"><a href="#">手机为为</a></dl>
+                <dl><a class="pub-server more" href="#">客服服务</a></dl>
+                <dl><a class="pub-followus more" href="#">关注我们</a></dl> 
+        </dl>
+        </div> 
+    </div>
 </body>
 </html>
