--- a/src/html/top.html
+++ b/src/html/top.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/top.css">
     <script src="../js/jquery-3.2.1.js"></script>
+    <script src="../js/top.js"></script>
     <!-- <script src="../lib/bootstrap-3.3.7-dist/js/bootstrap.js"></script> -->
 </head>
 <body>
@@ -18,7 +19,7 @@
         <div class="pub-top-left fl clearfix">
             <div>
             送至:
-            <span class="more">北京</span>
+            <span class="more currentpro">北京</span>
             </div>
             <ul class="province">
                 
