--- a/src/html/top.html
+++ b/src/html/top.html
@@ -14,12 +14,12 @@
     <!-- <script src="../lib/bootstrap-3.3.7-dist/js/bootstrap.js"></script> -->
 </head>
 <body>
-    <div class="public-top-layout">
+    <div class="pub-header-top">
         <div class="container">
         <div class="pub-top-left fl clearfix">
             <div>
-            送至:
-            <span class="more currentpro">北京</span>
+            <span>送至:</span> 
+            <em class="more currentpro">北京</em>
             </div>
             <ul class="province">
                 
@@ -29,15 +29,44 @@
                 <dt>
                     您好，欢迎来到 
                     <span class="mallvv">为为商城</span>
-                    <a class="tipcolor pub-login" href="#">请登录</a>
-                    <a class="pub-register" href="#">免费注册</a></dt>
-                <dl><a class="pub-order more" href="#">我的订单</a></dl>
-                <dl><a class="pub-buscen more" href="#">商家中心</a></dl>
-                <dl class="phone-mallvv"><a href="#">手机为为</a></dl>
-                <dl><a class="pub-server more" href="#">客服服务</a></dl>
-                <dl><a class="pub-followus more" href="#">关注我们</a></dl> 
+                    <a class="highcolor pub-login" href="#">请登录</a>
+                    <a class="pub-register" href="#">免费注册</a>
+                </dt>
         </dl>
         </div> 
+    </div>
+    <div class="pub-header-center">
+        <header>
+            <div class="container clearfix">
+                <h1 class="fl">
+                    <a href=""><img title="为为商城 http://www.mallvv.com/" src="../img/top/05174866977471586.png" class="pngFix"></a>
+                </h1>
+                <div class="fl pub-ad-left" title="上海品牌家具建材一站式购物网站"></div>
+                <div class="fl pub-search-warp">
+                    <div id="search-box" class="pub-search">
+                        <div class="fl sea-type more">
+                            <span>商品</span>
+                            <ul>
+                                <li>商品</li>
+                                <li>店铺</li>
+                            </ul>
+                        </div>
+                        <input class="fl sea-txt" type="text" placeholder="请输入您要搜索的商品关键字">
+                        <button class="fl search">搜索</button>
+                    </div>
+                    <div class="search-hot">
+                        <a class="hot" href="#">沙发</a>
+                        <a href="#">床</a>
+                        <a href="#">瓷砖</a>
+                        <a class="hot" href="#">地板</a>
+                        <a href="#">餐桌</a>
+                    </div>
+                </div>
+                <div class="fr mycart">
+                    我的购物车
+                </div>
+            </div>
+        </header>
     </div>
 </body>
 </html>
