--- a/src/html/top.html
+++ b/src/html/top.html
@@ -62,11 +62,68 @@
                         <a href="#">餐桌</a>
                     </div>
                 </div>
-                <div class="fr mycart">
-                    我的购物车
+                <div class="fr pub-mycart">
+                    <span class="pub-cart-nam">我的购物车</span> 
+                    <div class="pub-cart-val">
+                        <div class="pub-cart-title">
+                            <h4>最新加入的商品</h4>
+                        </div>
+                        <div class="pub-cart-contetn">
+                            <ul class="pub-cart-list">
+                                <span>您的购物车中暂无商品，赶快选择心爱的商品吧！</span>
+                            </ul>
+                        </div>
+                        <div class="pub-cart-balance">
+                            <span class="total-price"></span>
+                            <a href="http://www.mallvv.com/shop/index.php?act=cart" class="btn-cart">结算购物车中的商品</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </header>
+    </div>
+    <div class="pub-header-bottom">
+        <div class="container clearfix">
+            <div class="fl pub-recommend">
+                <span>精选分类推荐</span>
+                <div class="pub-rec-menu">
+                    <div class="pub-menu-list">
+                        <div>建材</div>
+                        <ul class="clearfix">
+                            <li><a href="#">基础建材</a></li>
+                            <li><a href="#">瓷砖/大理石/陶瓷</a></li>
+                            <li><a href="#">卫浴</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="fl pub-nav">
+                    <ul class="pub-nav-first clearfix">
+                            <li><a href="#">首页</a></li>
+                            <li><a href="#">建材</a></li>
+                            <li><a href="#">家具家纺</a></li>
+                            <li><a href="#">品牌</a></li>
+                            <li><a href="#">店铺</a></li>
+                            <li><a href="#">装修攻略</a></li>
+                            <li><a href="#">装修图库</a></li>
+                    </ul>
+                    <div class="pub-nav-second">
+                        <div class="col-blcok">
+                            <div class="pub-nav-wrap" style="display: block;">
+                                <a class="t" href="#" target="_blank">基础建材</a>
+                                <ul class="server-list">
+                                    <li class="l hl"><a href="#" target="_blank">其他辅料</a></li>
+                                    <li class="l hl"><a href="#" target="_blank">开关插座</a></li>
+                                    <li class="l hl"><a href="#" target="_blank">油漆涂料</a></li>
+                                    <li class="l hl"><a href="#" target="_blank">电线</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                            
+                    </div>
+            </div>
+            
+        </div>
     </div>
 </body>
 </html>
