longin finish regist 1

--- a/src/html/top.html
+++ b/src/html/top.html
@@ -12,10 +12,13 @@
         </div>
         <dl class="pub-top-right fr clearfix nav navbar-nav">
                 <dt>
+                    <span class="currentAcc"></span>
                     您好，欢迎来到 
                     <span class="mallvv">为为商城</span>
-                    <a class="highcolor pub-login" href="#">请登录</a>
-                    <a class="pub-register" href="#">免费注册</a>
+                    <span class="mallvv-do">
+                        <a class="highcolor pub-login" href="src/html/logreg.html?page=log">请登录</a>
+                        <a class="pub-register" href="src/html/logreg.html?page=reg">免费注册</a>
+                    </span>
                 </dt>
         </dl>
         </div> 
@@ -24,7 +27,7 @@
         <header>
             <div class="container clearfix">
                 <h1 class="fl">
-                    <a href=""><img class="pub-mallvv-log pngFix" title="为为商城 http://www.mallvv.com/" src="path"></a>
+                    <a href="http://localhost:1029/index.html"><img class="pub-mallvv-log pngFix" title="为为商城 http://www.mallvv.com/" src="path"></a>
                 </h1>
                 <div class="fl pub-ad-left" title="上海品牌家具建材一站式购物网站"></div>
                 <div class="fl pub-search-warp">
