--- a/src/html/goodlist.html
+++ b/src/html/goodlist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>shoplist</title>
+    <title>ShopList</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/top.css">
@@ -21,7 +21,6 @@
                 <span><a href="#">首页</a></span>
                 <span>&gt;</span>
                 <span><a href="#">建材</a></span>
-
             </div> 
             <div class="goodlist-main clearfix">
                  <div class="main-left fl">
@@ -29,7 +28,38 @@
                         <div class="title">
                             分类筛选
                         </div>
-                        <ul class="type-content"></ul>
+                        <ul class="type-content one">
+                            <li>
+                                <i class="open"></i>
+                                <a href="#">建材</a>
+                                <ul class="two">
+                                    <li>
+                                        <i class="open"></i>
+                                        <a href="#">基础建材</a>
+                                        <ul class="three">
+                                            <li><a href="#">其他辅料</a></li>
+                                            <li><a href="#">开关插座</a></li>
+                                            <li><a href="#">油漆涂料</a></li>
+                                            <li><a href="#">电线</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <i class="open"></i>
+                                        <a href="#">卫浴</a>
+                                        <ul class="three">
+                                            <li><a href="#">坐便器</a></li>
+                                            <li><a href="#">龙头</a></li>
+                                            <li><a href="#">油漆涂料</a></li>
+                                            <li><a href="#">电线</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <i></i>
+                                <a href="#">家具家纺</a>
+                            </li>
+                        </ul>
                     </div>
                     <div class="recently-browsee">
                         <div class="title">最近浏览</div>
@@ -42,21 +72,141 @@
                     <div class="title sort-type">
                         <dl class="clearfix fl">
                             <dt>排序方式：</dt>
-                            <dd>默认</dd>
-                            <dd>销售</dd>
-                            <dd>人气</dd>
-                            <dd>价格</dd>
+                            <dd class="active">默认</dd>
+                            <dd class="active desc">销售 <i></i></dd>
+                            <dd class="active asc">人气 <i></i></dd>
+                            <dd>价格 <i></i></dd>
                         </dl>
                         <p class="fl">商品所在地：</p>
                         <div class="address-select fl">
-
+                            <span class="address">不限地区</span>
+                            <div class="content">
+                                <div class="top">
+                                    <div class="cydq">
+                                        <p>常用地区</p>
+                                        <div class="cy">
+                                            <span>北京</span>
+                                            <span>北京</span>
+                                            <span>北京</span>
+                                            <span>北京</span>
+                                        </div>
+                                        <p>省份</p>
+                                        <div class="sf clearfix">
+                                            <div class="warp">
+                                                <div class="zm fl">A</div>
+                                                <div class="warp-city fl">
+                                                    <span>安徽</span>
+                                                    <span>安徽</span>
+                                                </div>
+                                            </div>
+                                            <div class="warp">
+                                                    <div class="zm fl">A</div>
+                                                    <div class="warp-city fl">
+                                                        <span>安徽</span>
+                                                        <span>安徽</span>
+                                                    </div>
+                                                </div>
+                                                <div class="warp">
+                                                        <div class="zm fl">A</div>
+                                                        <div class="warp-city fl">
+                                                            <span>安徽</span>
+                                                            <span>安徽</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="warp">
+                                                            <div class="zm fl">A</div>
+                                                            <div class="warp-city fl">
+                                                                <span>安徽</span>
+                                                                <span>安徽</span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="warp">
+                                                                <div class="zm fl">A</div>
+                                                                <div class="warp-city fl">
+                                                                    <span>安徽</span>
+                                                                    <span>安徽</span>
+                                                                </div>
+                                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="bottom">
+                                    <span>不限地区</span>
+                                </div>
+                            </div>
                         </div>
 
-                        <span class="fr page nextpage">下一页</span>
-                        <span class="fr page prepage">上一页</span>
+                        <span class="fr page  nextpage">下一页</span>
+                        <span class="fr page none prepage">上一页</span>
                     </div>
-                    <ul class="current-goodlist"></ul>
-                    <div class="goodlist-page"> </div>
+                    <ul class="current-goodlist">
+                        <li>
+                            <div class="item">
+                                <img src="../img/shoplist/001.jpg" alt="">
+                                <div class="warp">
+                                    <p class="name">新中源 釉面砖客厅全抛釉瓷砖地砖地板砖墙砖金刚釉8008 800*800</p>
+                                    <p class="price-warp"><em><span>¥</span><span class="price">69.00</span></em> ¥<del>276.00</del></p> 
+                                    <p class="stock">库存<span>999</span></p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                                <div class="item">
+                                    <img src="../img/shoplist/001.jpg" alt="">
+                                    <div class="warp">
+                                        <p class="name">新中源 釉面砖客厅全抛釉瓷砖地砖地板砖墙砖金刚釉8008 800*800</p>
+                                        <p class="price-warp"><em><span>¥</span><span class="price">69.00</span></em> ¥<del>276.00</del></p> 
+                                        <p class="stock">库存<span>999</span></p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                    <div class="item">
+                                        <img src="../img/shoplist/001.jpg" alt="">
+                                        <div class="warp">
+                                            <p class="name">新中源 釉面砖客厅全抛釉瓷砖地砖地板砖墙砖金刚釉8008 800*800</p>
+                                            <p class="price-warp"><em><span>¥</span><span class="price">69.00</span></em> ¥<del>276.00</del></p> 
+                                            <p class="stock">库存<span>999</span></p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                        <div class="item">
+                                            <img src="../img/shoplist/001.jpg" alt="">
+                                            <div class="warp">
+                                                <p class="name">新中源 釉面砖客厅全抛釉瓷砖地砖地板砖墙砖金刚釉8008 800*800</p>
+                                                <p class="price-warp"><em><span>¥</span><span class="price">69.00</span></em> ¥<del>276.00</del></p> 
+                                                <p class="stock">库存<span>999</span></p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                            <div class="item">
+                                                <img src="../img/shoplist/001.jpg" alt="">
+                                                <div class="warp">
+                                                    <p class="name">新中源 釉面砖客厅全抛釉瓷砖地砖地板砖墙砖金刚釉8008 800*800</p>
+                                                    <p class="price-warp"><em><span>¥</span><span class="price">69.00</span></em> ¥<del>276.00</del></p> 
+                                                    <p class="stock">库存<span>999</span></p>
+                                                </div>
+                        </div>
+                                        </li>
+
+                    </ul>
+                    <div class="goodlist-page">
+                        <div class="page">
+                            <span class="fister none tag"><a href="#">首页</a></span>
+                            <span class="prevpage none intag"><a href="#">上一页</a></span>
+                            <span class="num current"><a href="#">1</a></span>
+                            <span class="num"><a href="#">2</a></span>
+                            <span class="num"><a href="#">3</a></span>
+                            <span class="num"><a href="#">4</a></span>
+                            <span class="num"><a href="#">5</a></span>
+                            <span class="num"><a href="#">6</a></span>
+                            <span class="more"><a href="#">...</a></span>
+                            <span class="nextpage intag"><a href="#">下一页</a></span>
+                            <span class="endpage tag"><a href="#">末页</a></span>
+                        </div>
+                    </div>
                     <div class="likethink">
                         <div class="title">猜您喜欢的宝贝</div>
                         <div class="likeshop">
