--- a/src/html/gooddetails.html
+++ b/src/html/gooddetails.html
@@ -145,9 +145,9 @@
                         </div>
                     </div>
                     <!-- 底部 -->
-                    <div class="details-bottom">
+                    <div class="details-bottom clearfix">
                         <!-- 侧边栏 -->
-                        <div class="det-sidebar">
+                        <div class="det-sidebar fl">
                             <div class="default">
                                 <!-- 店铺名 -->
                                 <div class="store-name">
@@ -176,7 +176,63 @@
                                         <span class="active">热销商品排行</span>
                                         <span>热销收藏排行</span>
                                     </div>
-                                    <ul class="contetn">
+                                    <ul class="content">
+                                        <li class="clearfix">
+                                            <span class="img fl">
+                                                <img src="../img/shopdetails/beb/5507_05251898150940953_60.jpg" alt="">
+                                            </span>
+                                            <div class="shop fl">
+                                                <a href="#">龙凤床垫 分体式豪华 定制弹簧床垫 皇家御品系列 勋爵 1800*2000mm</a>
+                                                <span class="price">
+                                                        7190.00
+                                                </span>
+                                                <span class="selled">
+                                                        售出：<strong>0</strong>笔
+                                                </span>
+                                            </div>
+                                        </li>
+                                        <li class="clearfix">
+                                                <span class="img fl">
+                                                    <img src="../img/shopdetails/beb/5507_05251898150940953_60.jpg" alt="">
+                                                </span>
+                                                <div class="shop fl">
+                                                    <a href="#">龙凤床垫 分体式豪华 定制弹簧床垫 皇家御品系列 勋爵 1800*2000mm</a>
+                                                    <span class="price">
+                                                            7190.00
+                                                    </span>
+                                                    <span class="selled">
+                                                            售出：<strong>0</strong>笔
+                                                    </span>
+                                                </div>
+                                            </li>
+                                            <li class="clearfix">
+                                                    <span class="img fl">
+                                                        <img src="../img/shopdetails/beb/5507_05251898150940953_60.jpg" alt="">
+                                                    </span>
+                                                    <div class="shop fl">
+                                                        <a href="#">龙凤床垫 分体式豪华 定制弹簧床垫 皇家御品系列 勋爵 1800*2000mm</a>
+                                                        <span class="price">
+                                                                7190.00
+                                                        </span>
+                                                        <span class="selled">
+                                                                售出：<strong>0</strong>笔
+                                                        </span>
+                                                    </div>
+                                                </li>
+                                            <li class="clearfix">
+                                                    <span class="img fl">
+                                                        <img src="../img/shopdetails/beb/5507_05251898150940953_60.jpg" alt="">
+                                                    </span>
+                                                    <div class="shop fl">
+                                                        <a href="#">龙凤床垫 分体式豪华 定制弹簧床垫 皇家御品系列 勋爵 1800*2000mm</a>
+                                                        <span class="price">
+                                                                7190.00
+                                                        </span>
+                                                        <span class="selled">
+                                                                售出：<strong>0</strong>笔
+                                                        </span>
+                                                    </div>
+                                                </li>
                                         <li class="clearfix">
                                             <span class="img fl">
                                                 <img src="../img/shopdetails/beb/5507_05251898150940953_60.jpg" alt="">
@@ -192,12 +248,23 @@
                                             </div>
                                         </li>
                                     </ul>
+                                    <button class="search-btn-other">查看本店其他商品</button>
                                 </div>
                             </div>
                         </div>
                         <!-- 详情内容 -->
-                        <div class="det-main">
-
+                        <div class="det-main fr">
+                            <div class="main-title">
+                                <ul class="title clearfix">
+                                    <li class="item shop-details">商品详情</li>
+                                    <li class="item shop-assess">商品评价(<span>0</span>)</li>
+                                    <li class="item shop-record">销售记录(<span>0</span>)</li>
+                                    <li class="item buy-consult">购买咨询</li>
+                                </ul>
+                            </div>
+                            <div class="main-content"> 
+                                <!-- <img src="../img/shopdetails/beb/longbig.png" alt=""> -->
+                            </div>
                         </div>
                     </div>
                 </div>
