--- a/src/html/top.html
+++ b/src/html/top.html
@@ -97,7 +97,7 @@
                     </ul>
                     <div class="pub-nav-second">
                         <div class="col-blcok clearfix">
-                            <!-- <div class="pub-nav-wrap" style="display: block;">
+                            <div class="pub-nav-wrap" style="display: block;">
                                 <a class="t" href="#" target="_blank">基础建材</a>
                                 <ul class="server-list">
                                     <li class="l hl"><a href="#" target="_blank">其他辅料</a></li>
@@ -105,7 +105,7 @@
                                     <li class="l hl"><a href="#" target="_blank">油漆涂料</a></li>
                                     <li class="l hl"><a href="#" target="_blank">电线</a></li>
                                 </ul>
-                            </div> -->
+                            </div>
                         </div>
                             
                     </div>
