--- a/src/html/register.html
+++ b/src/html/register.html
@@ -5,25 +5,29 @@
             <li><span class="circle">2</span><p>填写账号信息</p></li>
             <li><span class="circle">3</span><p>注册成功</p></li>
         </ul>
-        <div class="reg-main">
+        <div class="reg-main clearfix">
             <div class="warp">
                 <span><img src="../img/common/register-tel-icon.png" alt=""></span>
                 <input id="reg-acc" class="reg-acc" type="text" placeholder="请输入您的手机号码">
+                <em class="errortip"></em>
             </div>
             <div class="warp">
                     <span><img src="../img/common/register-yanzhengma-icon.png" alt=""></span>
                     <input id="reg-vcode" class="reg-vcode"  type="text" placeholder="请输入验证码">
                     <span class="reg-vvcode">sdff</span>
+                    <em class="errortip"></em>
             </div>
             <div class="warp last">
                 <span><img src="../img/common/register-yanzhengma-icon.png" alt=""></span>
                 <input id="reg-pcode" class="reg-pcode" type="text" placeholder="请输入手机验证码 ">
+                <em class="errortip"></em>                
             </div>
-            <button class="warp btnreg">获取手机验证码</button>
+            <button class="warp btncode">获取手机验证码</button>
             <div class="reademe">
                 <input id="agree" class="agree" type="checkbox">
-                <label for="agree"></label>
+                <label for="agree" class="active"></label>
                 <span>我已阅读并同意<a href="#">服务协议</a></span>
+                <em class="errortip"></em>                                
             </div>
             <div class="btnnext">下一步</div>
         </div>
