--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="src/lib/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/base.css">
     <link rel="stylesheet" href="src/css/top.css">
     <link rel="stylesheet" href="src/css/bottom.css">
     <link rel="stylesheet" href="src/css/index.css">
+
     <script src="src/js/require.js" data-main="src/js/index"></script>
 </head>
 
@@ -18,6 +20,53 @@
     <div id="pub-header"></div>
     <div class="main">
         <div class="mallvv-banner">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                  <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                </ol>
+  
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                  <div class="item active">
+                    <img src="src/img/index/banner/web-101-101-1.jpg" alt="...">
+                   <!--  <div class="carousel-caption">
+                      ...
+                    </div> -->
+                  </div>
+                  <div class="item">
+                    <img src="src/img/index/banner/web-101-101-2.jpg" alt="...">
+                    <!-- <div class="carousel-caption">
+                      ...
+                    </div> -->
+                  </div>
+                  <div class="item">
+                    <img src="src/img/index/banner/web-101-101-4.jpg" alt="...">
+                    <!-- <div class="carousel-caption">
+                      ...
+                    </div> -->
+                  </div>
+                  <div class="item">
+                    <img src="src/img/index/banner/web-101-101-5.jpg" alt="...">
+                    <!-- <div class="carousel-caption">
+                      ...
+                    </div> -->
+                  </div>
+                </div>
+  
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
         </div>
         <div class="container">
             <div class="ind-hot-shop clearfix">
