1.完善主页轮播图，2.数据类型修改，3.商品列表1

--- a/index.html
+++ b/index.html
@@ -208,10 +208,23 @@
                             <a target="_blank" href="#"><img width="220" height="500" src="src/img/index/main/ad/7787643af8658c922280.jpg"></a> </div>
                         <div class="middle">
                             <div id="demo1" class="slideBox" style="width: 500px; height: 320px;">
-                                <ul class="items" style="width: 1000px; left: -500px;">
+                                <!-- <ul class="items" style="width: 1000px; left: -500px;">
                                     <li class="active" style="width: 500px; height: 320px;"><a target="_blank" href="#"><img width="500" height="320" src="src/img/index/main/ad/56ad35ea1ecb4a6c3540.jpg"></a></li>
                                     <li style="width: 500px; height: 320px;" class=""><a target="_blank" href="#"><img width="500" height="320" src="src/img/index/main/ad/4f20dfd49053929a7421.jpg"></a></li>
-                                </ul>
+                                </ul> -->
+
+                                <div id="carousel-example-one" class="carousel carousel-example slide" data-ride="carousel">
+                                    <!-- Wrapper for slides -->
+                                    <div class="carousel-inner" role="listbox">
+                                      <div class="item active">
+                                        <img  width="500" height="320" src="src/img/index/main/ad/56ad35ea1ecb4a6c3540.jpg" alt="...">
+                                      </div>
+                                      <div class="item">
+                                        <img width="500" height="320" src="src/img/index/main/ad/4f20dfd49053929a7421.jpg" alt="...">
+                                      </div>
+                                    </div>
+                                  </div>
+
                                 <div class="tips" style="opacity: 1;">
                                     <div class="nums" style=""><a href="#" class="" style="border-radius: 0px;"></a><a href="#" style="border-radius: 0px;" class="active"></a></div>
                                 </div>
@@ -247,8 +260,31 @@
                            
                             <div class="middle">
                                 <div id="demo2" class="slideBox" style="width: 500px; height: 320px;">
-                                    <ul class="items" style="width: 1000px; left: -500px;"><li class="active" style="width: 500px; height: 320px;"><a target="_blank" href="#"><img width="500" height="320" src="src/img/index/main/ad/f6b9a5f53acea0798250.jpg"></a></li><li style="width: 500px; height: 320px;" class=""><a target="_blank" href="#"><img width="500" height="320" src="src/img/index/main/ad/47d59c564bb803f57981.jpg"></a></li></ul>                    <div class="tips" style="opacity: 1;"><div class="nums" style=""><a href="#" class="" style="border-radius: 0px;"></a><a href="#" style="border-radius: 0px;" class="active"></a></div></div></div>
-                                <ul class="two-ads">
+                                    <!-- <ul class="items" style="width: 1000px; left: -500px;">
+                                            <li class="active" style="width: 500px; height: 320px;">
+                                                <a target="_blank" href="#">
+                                                <img width="500" height="320" src="src/img/index/main/ad/f6b9a5f53acea0798250.jpg">
+                                            </a>
+                                            </li>
+                                            <li style="width: 500px; height: 320px;" class="">
+                                                <a target="_blank" href="#"
+                                                ><img width="500" height="320" src="src/img/index/main/ad/47d59c564bb803f57981.jpg">
+                                            </a>
+                                        </li>
+                                     </ul> -->        
+                                     <div id="carousel-example-two" class="carousel carousel-example slide" data-ride="carousel">
+                                            <!-- Wrapper for slides -->
+                                        <div class="carousel-inner" role="listbox">
+                                            <div class="item active">
+                                            <img  width="500" height="320" src="src/img/index/main/ad/f6b9a5f53acea0798250.jpg" alt="...">
+                                            </div>
+                                            <div class="item">
+                                            <img width="500" height="320" src="src/img/index/main/ad/47d59c564bb803f57981.jpg" alt="...">
+                                            </div>
+                                        </div>
+                                    </div>
+                                     <div class="tips" style="opacity: 1;"><div class="nums" style=""><a href="#" class="" style="border-radius: 0px;"></a><a href="#" style="border-radius: 0px;" class="active"></a></div></div></div> 
+                                    <ul class="two-ads">
                                     <li>
                                         <a target="_blank" href="#"><img width="250" height="180" src="src/img/index/main/ad/cc0831f62c9d3fe79510.jpg"></a>                        </li>
                                     <li>
@@ -278,7 +314,30 @@
                                   <a target="_blank" href="#"><img width="220" height="500" src="src/img/index/main/ad/1eca013b406d83058320.jpg"></a>				</div>
                              <div class="middle">
                                  <div id="demo3" class="slideBox" style="width: 500px; height: 320px;">
-                                    <ul class="items" style="width: 1000px; left: -500px;"><li class="active" style="width: 500px; height: 320px;"><a target="_blank" href="#"><img width="500" height="320" src="src/img/index/main/ad/493e1af68d24b3a12860.jpg"></a></li><li style="width: 500px; height: 320px;" class=""><a target="_blank" href="#"><img width="500" height="320" src="src/img/index/main/ad/07702211a08f0bca3031.jpg"></a></li></ul>                    <div class="tips" style="opacity: 1;"><div class="nums" style=""><a href="#" class="" style="border-radius: 0px;"></a><a href="#" style="border-radius: 0px;" class="active"></a></div></div></div>
+                                    <!-- <ul class="items" style="width: 1000px; left: -500px;">
+                                        <li class="active" style="width: 500px; height: 320px;">
+                                            <a target="_blank" href="#">
+                                                <img width="500" height="320" src="src/img/index/main/ad/493e1af68d24b3a12860.jpg">
+                                            </a>
+                                        </li>
+                                        <li style="width: 500px; height: 320px;" class="">
+                                            <a target="_blank" href="#">
+                                                <img width="500" height="320" src="src/img/index/main/ad/07702211a08f0bca3031.jpg">
+                                            </a>
+                                        </li>
+                                    </ul>                    -->
+                                <div id="carousel-example-three" class="carousel carousel-example slide" data-ride="carousel">
+                                        <!-- Wrapper for slides -->
+                                    <div class="carousel-inner" role="listbox">
+                                        <div class="item active">
+                                        <img  width="500" height="320" src="src/img/index/main/ad/493e1af68d24b3a12860.jpg" alt="...">
+                                        </div>
+                                        <div class="item">
+                                        <img width="500" height="320" src="src/img/index/main/ad/07702211a08f0bca3031.jpg" alt="...">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tips" style="opacity: 1;"><div class="nums" style=""><a href="#" class="" style="border-radius: 0px;"></a><a href="#" style="border-radius: 0px;" class="active"></a></div></div></div>
                                  <ul class="two-ads">
                                      <li>
                                          <a target="_blank" href="#"><img width="250" height="180" src="src/img/index/main/ad/8582ff2069079e401680.jpg"></a>                        </li>
