--- a/src/html/goodlist.html
+++ b/src/html/goodlist.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="../css/top.css">
     <link rel="stylesheet" href="../css/bottom.css">
     <link rel="stylesheet" href="../css/goodlist.css">
+    <script src="../js/require.js" data-main="../js/goodlist"></script>
 </head>
 <body>
     <div id="pub-header"></div>
-
     <div class="mallvv-goodlist">
         <div class="container">
             <div class="mallvv-current-nav">
