--- a/src/html/goodlist.html
+++ b/src/html/goodlist.html
@@ -139,7 +139,7 @@
                         <span class="fr page  nextpage">下一页</span>
                         <span class="fr page none prepage">上一页</span>
                     </div>
-                    <ul class="current-goodlist">
+                    <ul class="current-goodlist clearfix">
                         <li>
                             <div class="item">
                                 <img src="../img/shoplist/001.jpg" alt="">
@@ -150,47 +150,6 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
-                                <div class="item">
-                                    <img src="../img/shoplist/001.jpg" alt="">
-                                    <div class="warp">
-                                        <p class="name">新中源 釉面砖客厅全抛釉瓷砖地砖地板砖墙砖金刚釉8008 800*800</p>
-                                        <p class="price-warp"><em><span>¥</span><span class="price">69.00</span></em> ¥<del>276.00</del></p> 
-                                        <p class="stock">库存<span>999</span></p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                    <div class="item">
-                                        <img src="../img/shoplist/001.jpg" alt="">
-                                        <div class="warp">
-                                            <p class="name">新中源 釉面砖客厅全抛釉瓷砖地砖地板砖墙砖金刚釉8008 800*800</p>
-                                            <p class="price-warp"><em><span>¥</span><span class="price">69.00</span></em> ¥<del>276.00</del></p> 
-                                            <p class="stock">库存<span>999</span></p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                        <div class="item">
-                                            <img src="../img/shoplist/001.jpg" alt="">
-                                            <div class="warp">
-                                                <p class="name">新中源 釉面砖客厅全抛釉瓷砖地砖地板砖墙砖金刚釉8008 800*800</p>
-                                                <p class="price-warp"><em><span>¥</span><span class="price">69.00</span></em> ¥<del>276.00</del></p> 
-                                                <p class="stock">库存<span>999</span></p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                            <div class="item">
-                                                <img src="../img/shoplist/001.jpg" alt="">
-                                                <div class="warp">
-                                                    <p class="name">新中源 釉面砖客厅全抛釉瓷砖地砖地板砖墙砖金刚釉8008 800*800</p>
-                                                    <p class="price-warp"><em><span>¥</span><span class="price">69.00</span></em> ¥<del>276.00</del></p> 
-                                                    <p class="stock">库存<span>999</span></p>
-                                                </div>
-                        </div>
-                                        </li>
-
                     </ul>
                     <div class="goodlist-page">
                         <div class="page">
